ThoughtLog: Thought Endpoints.
* Included POST /thought
           GET  /thoughts endpoints.
